server logic tests